fix: remove overflow-hidden from #root element

--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,6 @@
     overflow-x: hidden;
   }
 
-  #root {
-    overflow-x: hidden;
-  }
-
   .active {
     background-color: #535051;
   }
